// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateDependabot > snapshot: npm and github-actions, en 1`] = `
"# Generated by https://rs256.net/actions/ - edit freely.
# Automatic dependency updates.
# https://docs.github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
version: 2
updates:
  # Node.js dependencies (package.json).
  - package-ecosystem: "npm"
    directory: "/"
    schedule:
      interval: "weekly"
      day: "monday"
      time: "09:00"
      timezone: "Asia/Tokyo"
    open-pull-requests-limit: 5
    # A grouped update arrives as a single pull request, so one green run merges all of it.
    groups:
      minor-and-patch:
        update-types:
          - "minor"
          - "patch"
  # Actions used by the workflows in .github/workflows.
  - package-ecosystem: "github-actions"
    directory: "/"
    schedule:
      interval: "weekly"
      day: "monday"
      time: "09:00"
      timezone: "Asia/Tokyo"
    open-pull-requests-limit: 5
    # A grouped update arrives as a single pull request, so one green run merges all of it.
    groups:
      minor-and-patch:
        update-types:
          - "minor"
          - "patch"
"
`;

exports[`generateDependabot > snapshot: npm and github-actions, ja 1`] = `
"# https://rs256.net/actions/ で生成。自由に編集してよい。
# 依存関係の自動更新設定。
# https://docs.github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
version: 2
updates:
  # Node.js の依存関係（package.json）。
  - package-ecosystem: "npm"
    directory: "/"
    schedule:
      interval: "weekly"
      day: "monday"
      time: "09:00"
      timezone: "Asia/Tokyo"
    open-pull-requests-limit: 5
    # まとめられた更新は 1 本の PR になるため、1 度のビルド通過でまとめてマージされる。
    groups:
      minor-and-patch:
        update-types:
          - "minor"
          - "patch"
  # .github/workflows で使っているアクション。
  - package-ecosystem: "github-actions"
    directory: "/"
    schedule:
      interval: "weekly"
      day: "monday"
      time: "09:00"
      timezone: "Asia/Tokyo"
    open-pull-requests-limit: 5
    # まとめられた更新は 1 本の PR になるため、1 度のビルド通過でまとめてマージされる。
    groups:
      minor-and-patch:
        update-types:
          - "minor"
          - "patch"
"
`;
